Closed Bug 1371299 Opened 7 years ago Closed 7 years ago

Scrollbar thumb inside iframe flickers after being offscreen

Categories

(Core :: Panning and Zooming, defect, P2)

55 Branch
Unspecified
Windows
defect

Tracking

()

VERIFIED FIXED
mozilla55
Tracking Status
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- verified

People

(Reporter: Ovidiu, Assigned: botond)

References

Details

(Keywords: regression, Whiteboard: [gfx-noted])

Attachments

(1 file, 1 obsolete file)

This issue is reproducible only on Windows. Tested on Windows 7 and 10 with FF Nightly 55.0a1(2017-06-08) STR: 1. Load https://people-mozilla.org/~bballo/bug1359868.html 2. Unmaximize the Firefox window if necessary, and position it so that there's space below it. 3. Click on "Append" 3. Grab the subframe's scroll thumb near the top. 4. Drag it down until mouse leaves the Firefox window, and then back up. Expected results: The scrollbar thumb is fully painted when you drag it back up. Actual results: The scrollbar thumb has some flickers.
Keywords: regression
Priority: -- → P2
See Also: → 1367488
Whiteboard: [gfx-noted]
Thanks, I can reproduce this on Windows.
Assignee: nobody → botond
This appears to be a regression from bug 1352863. The bug can be reproduced on other platforms after setting the "slider.snapMultiplier" pref to a non-zero value (Windows builds use 6) and restarting.
Blocks: 1352863
We are snapping back the thumb to its original position whenever we think the mouse is horizontally (for a vertical thumb) farther away from it then a constant multiple times the thumb width. When the thumb is offscreen, the width computed in APZ is zero, so the condition is triggered spuriously.
Old school patch because MozReview is not being cooperative.
Attachment #8876304 - Flags: review?(bugmail)
Now without silly grammar errors.
Attachment #8876304 - Attachment is obsolete: true
Attachment #8876304 - Flags: review?(bugmail)
Attachment #8876305 - Flags: review?(bugmail)
Attachment #8876305 - Flags: review?(bugmail) → review+
Pushed by bballo@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/091c8103ff38 Restrict the thumb snapping back to its original position to when the thumb is on-screen. r=kats
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
I verified this issue on Windows 10 and 7 with FF Nightly 56.0a1(2017-06-13) and I can't reproduce the bug. I will mark as a verified fix.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: