Bug 1371299 - Restrict the thumb snapping back to its original position to when the thumb is on-screen. r=kats

MozReview-Commit-ID: 2oZMwlusg2n

--HG--
extra : rebase_source : 5400135b4c32327a8deaa73faa2076fb7a000d25